fixing gap into cards and images sizes on cats and home  page

--- a/public/assets/css/cards.css
+++ b/public/assets/css/cards.css
@@ -1,5 +1,6 @@
 .card-cat {
-    height          : 300px;
+    --card-height:400px;
+    height          : var(--card-height);
     border-radius   : 8px;
     background-color: var(--primary-color);
     border          : none;
@@ -7,7 +8,7 @@
 }
 
 .card-img-top {
-    height    : var(--height-image-card);
+    height    : calc(var(--height-image-card) * 62.5%);
     object-fit: cover;
 }
 
@@ -28,7 +29,7 @@
     align-self      : flex-end;
     background-color: var(--light-color);
     color           : var(--primary-color);
-    font-size       : var(--title-size);
+    font-size       : 30px;
     box-shadow      : var(--border-shadow);
     font-weight     : bold;
     border-radius   : 50%;
@@ -55,4 +56,7 @@
 .paw {
     height          : 30px;
     margin-block-end: var(--spacing);
+}
+.column {
+    width: calc((100% - 2em) / 3);
 }
